<resources>
    <string name="app_name">onTIX</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="content_title">Content Title</string>
    <string name="content_overview">Content Overview</string>
    <string name="release_date">Release Date :</string>
    <string name="content_release_date">Content Release Date</string>
    <string name="popularity">Popularity :</string>
    <string name="content_popularity">Content Popularity</string>
    <string name="vote_average">Vote Average :</string>
    <string name="content_vote_average">Content Vote Average</string>
    <string name="settings">Settings</string>
    <string name="notifikasi">Notifikasi</string>
    <string name="bantuan">Bantuan</string>
    <string name="tentang_kami">Tentang Kami</string>
    <string name="movie_title">Movie Title</string>
    <string name="buy_ticket">Buy Ticket</string>
    <string name="movie">Movie</string>
    <string name="theater">Theater</string>
    <string name="profile">Profile</string>
    <string name="title_name">Title Name</string>
    <string name="content_name">Content Name</string>
    <string name="title_country">Title Country</string>
    <string name="content_country">Content Country</string>
    <string name="name">name</string>
    <string name="Name">Name</string>
    <string name="email">email</string>
    <string name="Email">Email</string>
    <string name="notification_title">Silakan Lakukan Pembayaran</string>
    <string name="notification_content">Simpan Bukti Pembayaran Anda</string>
    <string name="jumlah_tiket">Jumlah Tiket</string>
    <string name="harga_tiket_satuan">Harga Tiket Satuan</string>
    <string name="rp_50000">Rp. 50000</string>
    <string name="total">Total</string>
    <string name="result">-</string>
    <string name="pay">Pay</string>
    <string name="phone">phone</string>
    <string name="Phone">Phone</string>
    <string name="address">address</string>
    <string name="Address">Address</string>

    <string-array name="data_name">
        <item>ARION XXI</item>
        <item>GRAND PARAGON XXI</item>
        <item>BRAGA XXI</item>
        <item>TSM XXI</item>
        <item>BOEMI KEDATON XXI</item>
        <item>MALKARTINI XXI</item>
        <item>TRANSMART PADANG XXI</item>
        <item>STUDIO XXI</item>
        <item>CENTRAL CITY XXI</item>
        <item>ROYAL XXI</item>
    </string-array>

    <string-array name="data_address">
        <item>Jl. Pemuda No. 2, RT.2/RW.7, Rawamangun, Kec. Pulo Gadung, Kota Jakarta Timur, Daerah Khusus Ibukota Jakarta</item>
        <item>Jl. Gajah Mada No.126, RT.13/RW.8, Keagungan, Kec. Taman Sari, Kota Jakarta Barat, Daerah Khusus Ibukota Jakarta</item>
        <item>Jl. Braga No.99-101, Braga, Kec. Sumur Bandung, Kota Bandung, Jawa Barat</item>
        <item>Jl. Gatot Subroto No.289, Cibangkong, Kec. Batununggal, Kota Bandung, Jawa Barat</item>
        <item>Jl. Sultan Agung No.1, Kota Bandar Lampung, Lampung</item>
        <item>Jl. RA Kartini No.49, Kota Bandar Lampung, Lampung</item>
        <item>Jl. Khatib Sulaiman No.85, Ulak Karang Sel, Kec. Padang Utara, Kota Padang, Sumatera Barat</item>
        <item>Jl. Sam Ratulangi No. 35, Makassar</item>
        <item>Jl. Brigjen Sudhiarto KM 11, Penggaron Kidul, Pedurungan, Kota Semarang, Jawa Tengah</item>
        <item>Jl. Achmad Yani No.16-18, Wonokromo, Kec. Wonokromo, Kota Surabaya, Jawa Timur</item>
    </string-array>
</resources>